--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,15 +1,16 @@
-*,
-*::before,
-*::after {
-  padding: 0;
-  margin: 0;
+body {
+  font-family: Montserrat, sans-serif;
 }
 
 img {
   display: block;
+  width: 100%;
+  height: auto;
 }
 ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 a {
   text-decoration: none;
