--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,23 +1,20 @@
 .container {
-  margin: 0 auto;
-}
-
-@media screen and (min-width: 320px) {
-  .container {
-    width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+  @media screen and(max-width: $to-mobile) {
+    max-width: $mobile;
     padding: 0 20px;
   }
-}
-
-@media screen and (min-width: 595px) {
-  .container {
-    width: 595px;
+  @media screen and(min-width: $mobile) {
+    width: $mobile;
+    padding: 0 20px;
   }
-}
-
-@media screen and (min-width: 1050px) {
-  .container {
-    width: 1050px;
+  @media screen and(min-width: $tablet) {
+    width: $tablet;
+    padding: 0 20px;
+  }
+  @media screen and(min-width: $desktop) {
+    width: $desktop;
     padding: 0 50px;
   }
 }
