adds hero section

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,3 +1,5 @@
-<div class="container">
-    <h1 class="hero-title">FIND BEST EVENTS <br> AROUND THE WORLD</h1>
-</div>
+<section class="hero">
+    <div class="container hero-container">
+        <h1 class="hero-title">FIND BEST EVENTS <br> AROUND THE WORLD</h1>
+    </div>
+</section>
