Добавил шаблон и пробную разметку li

--- a/src/partials/events-section.html
+++ b/src/partials/events-section.html
@@ -1,6 +1,15 @@
 <section class="gallery container">
-  <form class="gallery__search-form">
-    <input type="text" class="gallery__search-query" />
-    <select name="" id="" class="gallery__search-country"></select>
-  </form>
+    <form class="gallery__search-form">
+        <input type="text" class="gallery__search-query" />
+        <select name="" id="" class="gallery__search-country"></select>
+    </form>
+
+    <ul class="event-list">
+        <li class="event-list__item">
+            <img class="event-image" src="./images/Rectangle6.jpg" alt="тест-картинка" width="180" height="227">
+            <h2 class="event-name">MONATIK</h2>
+            <p class="event-date">2021-07-17</p>
+            <a class="event-location" href="https://www.google.com/maps"><span></span>Palace</a>
+        </li>
+    </ul>
 </section>
