--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,17 +1,23 @@
 body {
-  font-family: Montserrat, sans-serif;
+    font-family: Montserrat, sans-serif;
 }
 
 img {
-  display: block;
-  width: 100%;
-  height: auto;
+    display: block;
+    width: 100%;
+    height: auto;
 }
+
 ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
+
 a {
-  text-decoration: none;
+    text-decoration: none;
+}
+
+h2 {
+    margin: 0;
 }
