--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,4 +1,5 @@
-$main-font: 'Montserrat', sans-serif;
+$main-font: 'Montserrat',
+sans-serif;
 $accent-color: #dc56c5;
 $darc-theme-main-text-color: #ffffff;
 $secondary-text-color: #939393;
