--- a/src/sass/events-section/_events-section.scss
+++ b/src/sass/events-section/_events-section.scss
@@ -5,20 +5,18 @@
   flex-direction: column;
 
   width: 270px;
-  //   margin-left: auto;
-  //   margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 52px;
-
-  //   background-color: black;
 
   @media screen and(min-width: $tablet) {
     flex-direction: row;
-    width: 100%;
+    width: 570px;
   }
 
-  @media screen and(min-width: $desktop) {
-    margin-left: 240px;
-  }
+  // @media screen and(min-width: $desktop) {
+  //   margin-left: 240px;
+  // }
 }
 .gallery__search-label {
   position: absolute;
