--- a/src/sass/events-section/_events-section.scss
+++ b/src/sass/events-section/_events-section.scss
@@ -12,11 +12,12 @@
   @media screen and(min-width: $tablet) {
     flex-direction: row;
     width: 570px;
+    margin-bottom: 123px;
   }
 
-  // @media screen and(min-width: $desktop) {
-  //   margin-left: 240px;
-  // }
+  @media screen and(min-width: $desktop) {
+    margin-bottom: 133px;
+  }
 }
 .gallery__search-label {
   position: absolute;
