changed section name

--- a/src/partials/events-section.html
+++ b/src/partials/events-section.html
@@ -1,25 +1,24 @@
-<section class="gallery">
+<section class="events-section">
   <div class="container">
-    <form class="gallery__search-form">
+    <form class="events__search-form">
       <input
         id="query-input"
         type="text"
-        class="gallery__search-query gallery__input"
+        class="events__search-query gallery__input"
         placeholder="Start searching"
       />
-      <label class="gallery__search-label" for="query-input"
-        ><svg width="12" height="12" class="gallery__search-icon">
+      <label class="events__search-label" for="query-input"
+        ><svg width="12" height="12" class="events__search-icon">
           <use href="./../src/images/svg/gallery-sprite.svg#icon-search"></use></svg
       ></label>
-      <select name="" id="country-select" class="gallery__search-country gallery__input">
+      <select name="" id="country-select" class="events__search-country gallery__input">
         <option value="">Choose country</option>
       </select>
-      <label class="gallery__select-label" for="country-select">
-        <svg width="15" height="10" class="gallery__arrow-icon">
+      <label class="events__select-label" for="country-select">
+        <svg width="15" height="10" class="events__arrow-icon">
           <use href="./../src/images/svg/gallery-sprite.svg#icon-arrow"></use>
         </svg>
       </label>
     </form>
-    <ul class="gallery__list"></ul>
   </div>
 </section>
