--- a/src/partials/events-section.html
+++ b/src/partials/events-section.html
@@ -4,14 +4,14 @@
       <input
         id="query-input"
         type="text"
-        class="events__search-query gallery__input"
+        class="events__search-query events__input"
         placeholder="Start searching"
       />
       <label class="events__search-label" for="query-input"
         ><svg width="12" height="12" class="events__search-icon">
           <use href="./../src/images/svg/gallery-sprite.svg#icon-search"></use></svg
       ></label>
-      <select name="" id="country-select" class="events__search-country gallery__input">
+      <select name="" id="country-select" class="events__search-country events__input">
         <option value="">Choose country</option>
       </select>
       <label class="events__select-label" for="country-select">
