Добавил svg и названия списка

--- a/src/partials/events-section.html
+++ b/src/partials/events-section.html
@@ -4,12 +4,12 @@
         <select name="" id="" class="gallery__search-country"></select>
     </form>
 
-    <ul class="event-list">
-        <li class="event-list__item">
+    <ul class="events-list">
+        <li class="events-list__item">
             <img class="event-image" src="./images/Rectangle6.jpg" alt="тест-картинка" width="180" height="227">
             <h2 class="event-name">MONATIK</h2>
             <p class="event-date">2021-07-17</p>
-            <a class="event-location" href="https://www.google.com/maps"><span></span>Palace</a>
+            <p><span></span>Palace</p>
         </li>
     </ul>
 </section>
