--- a/src/sass/events-section/_events-section.scss
+++ b/src/sass/events-section/_events-section.scss
@@ -1,4 +1,4 @@
-       .event-list__item {
+       .events-list__item {
            @media screen and (max-wigth: 767px) {
                width: 138px;
            }
