--- a/src/templates/event-card.hbs
+++ b/src/templates/event-card.hbs
@@ -13,5 +13,5 @@
 
     <h2 class="event-name">{{name}}</h2>
     <p class="event-date">{{dates.start}}</p>
-    <a class="event-location" href="https://www.google.com/maps"><span></span>{{location}}</a>
+    <p><span></span>{{location}}</p>
 </li>
