--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,23 +1,24 @@
 body {
-    font-family: Montserrat, sans-serif;
+  font-family: Montserrat, sans-serif;
+  background-color: #000000;
 }
 
 img {
-    display: block;
-    width: 100%;
-    height: auto;
+  display: block;
+  width: 100%;
+  height: auto;
 }
 
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 h2 {
-    margin: 0;
+  margin: 0;
 }
