--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -2,8 +2,7 @@
   margin-left: auto;
   margin-right: auto;
   @media screen and(max-width: $to-mobile) {
-    max-width: $mobile;
-    padding: 0 20px;
+    max-width: $to-mobile;
   }
   @media screen and(min-width: $mobile) {
     width: $mobile;
@@ -11,10 +10,10 @@
   }
   @media screen and(min-width: $tablet) {
     width: $tablet;
-    padding: 0 20px;
+    padding: 0 79px;
   }
   @media screen and(min-width: $desktop) {
     width: $desktop;
-    padding: 0 50px;
+    padding: 0 167px;
   }
 }
