adds more items in list and creates partial for gallery styles

--- a/src/partials/events-section.html
+++ b/src/partials/events-section.html
@@ -21,12 +21,246 @@
       </label>
     </form>
     <ul class="events-list">
-        <li class="events-list__item">
-            <img class="event-image" src="./images/Rectangle6.jpg" alt="тест-картинка" width="180" height="227">
-            <h2 class="event-name">MONATIK</h2>
-            <p class="event-date">2021-07-17</p>
-            <p><span></span>Palace</p>
-        </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
+      <li class="events-list__item">
+        <img
+          class="event-image"
+          src="./images/Rectangle6.jpg"
+          alt="тест-картинка"
+          width="180"
+          height="227"
+        />
+        <h2 class="event-name">MONATIK</h2>
+        <p class="event-date">2021-07-17</p>
+        <p><span></span>Palace</p>
+      </li>
     </ul>
   </div>
 </section>
