--- a/src/sass/events-section/_one-card-styles.scss
+++ b/src/sass/events-section/_one-card-styles.scss
@@ -5,7 +5,7 @@
   width: 196px;
   display: block;
   text-align: center;
-  background-color: black;
+  //   background-color: black;
 }
 
 .event-image {
