Добавил стили li

--- a/src/templates/event-card.hbs
+++ b/src/templates/event-card.hbs
@@ -10,8 +10,8 @@
         width="180" 
         height="227"
     >
-
+    <span class="event-image-span"></span>
     <h2 class="event-name">{{name}}</h2>
     <p class="event-date">{{dates.start}}</p>
-    <p><span></span>{{location}}</p>
+    <p class="event-location">{{location}}</p>
 </li>
