--- a/src/partials/events-section.html
+++ b/src/partials/events-section.html
@@ -1,32 +1,30 @@
 <section class="events-section">
-  <div class="container">
-    <form class="events__search-form">
-      <input
-        id="query-input"
-        type="text"
-        class="events__search-query events__input"
-        placeholder="Start searching"
-      />
-      <label class="events__search-label" for="query-input"
-        ><svg width="12" height="12" class="events__search-icon">
-          <use href="./../src/images/svg/gallery-sprite.svg#icon-search"></use></svg
-      ></label>
-      <select name="" id="country-select" class="events__search-country events__input">
+    <div class="container">
+        <form class="events__search-form">
+            <input id="query-input" type="text" class="events__search-query events__input" placeholder="Start searching" />
+            <label class="events__search-label" for="query-input">
+        <svg width="12" height="12" class="events__search-icon">
+          <use href="./../src/images/svg/gallery-sprite.svg#icon-search"></use>
+        </svg>
+      </label>
+            <select name="" id="country-select" class="events__search-country events__input">
         <option value="">Choose country</option>
       </select>
-      <label class="events__select-label" for="country-select">
+            <label class="events__select-label" for="country-select">
         <svg width="15" height="10" class="events__arrow-icon">
           <use href="./../src/images/svg/gallery-sprite.svg#icon-arrow"></use>
         </svg>
       </label>
-    </form>
-    <ul class="events-list">
-        <li class="events-list__item">
-            <img class="event-image" src="./images/Rectangle6.jpg" alt="тест-картинка" width="180" height="227">
-            <h2 class="event-name">MONATIK</h2>
-            <p class="event-date">2021-07-17</p>
-            <p><span></span>Palace</p>
-        </li>
-    </ul>
-  </div>
+        </form>
+
+        <ul class="events-list">
+            <li class="events-list__item">
+                <img class="event-image" src="./images/Rectangle6.jpg" alt="тест-картинка" width="180" height="227">
+                <span class="event-image-span"></span>
+                <h2 class="event-name">MONATIK</h2>
+                <p class="event-date">2021-07-17</p>
+                <p class="event-location">Palace</p>
+            </li>
+        </ul>
+    </div>
 </section>
