created countries list and improoved select

--- a/src/partials/events-section.html
+++ b/src/partials/events-section.html
@@ -6,6 +6,7 @@
         type="text"
         class="events__search-query events__input"
         placeholder="Start searching"
+        autocomplete="off"
       />
       <label class="events__search-label" for="query-input"
         ><svg width="12" height="12" class="events__search-icon">
