adds prototype of formEvents Listener

--- a/src/sass/events-section/_inputs-styles.scss
+++ b/src/sass/events-section/_inputs-styles.scss
@@ -52,7 +52,7 @@
 
   border-radius: 20px;
 
-  //   border-color: transparent;
+  border-color: transparent;
 }
 .events__search-query {
   @media screen and(max-width: $to-tablet) {
