--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,17 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="footer-title">
-      <span
-        >© 2021 | All Rights Reserved | Developed with <span class="footer-heart">♥</span>
-        <a class="students-goit" href="">by GoIT Students</a>
-      </span>
-    </div>
-  </body>
-</html>
+<footer>
+  <div class="container">
+    <span class="footer-title"
+      >© 2021 | All Rights Reserved | Developed with <span class="footer-heart">♥</span>
+      <p class="students-goit">by GoIT Students</p>
+    </span>
+  </div>
+</footer>
