--- a/src/sass/header/_header.scss
+++ b/src/sass/header/_header.scss
@@ -1,20 +1,26 @@
-@media screen and (max-width: 767px) {
-  .header-logo {
-    width: 213.97px;
-    height: 180px;
-  }
-}
+// .container {
+//   position: relative;
+// }
 
-@media screen and (min-width: 768px) and (max-width: 1279px) {
-  .header-logo {
-    width: 302px;
-    height: 359px;
-  }
-}
+// @media screen and (max-width: 767px) {
+//   .logo {
+//     position: absolute;
+//     left: auto;
+//     width: 213.97px;
+//     height: 180px;
+//   }
+// }
 
-@media screen and (min-width: 1280px) {
-  .header-logo {
-    width: 402px;
-    height: 477px;
-  }
-}
+// @media screen and (min-width: 768px) and (max-width: 1279px) {
+//   .logo {
+//     width: 302px;
+//     height: 359px;
+//   }
+// }
+
+// @media screen and (min-width: 1280px) {
+//   .logo {
+//     width: 402px;
+//     height: 477px;
+//   }
+// }
