--- a/src/partials/modul-window-card.html
+++ b/src/partials/modul-window-card.html
@@ -1,4 +1,4 @@
-<div data-modal class="backdrop">
+<div data-modal class="backdrop is--hidden">
   <div class="modal__box">
     <form class="modal__form" action="">
       <button class="modal__btn">
