--- a/src/sass/modul-window-card/_modul-window-card.scss
+++ b/src/sass/modul-window-card/_modul-window-card.scss
@@ -1,6 +1,22 @@
-.backdrop .is--hidden {
-  display: none;
+.backdrop.is--hidden {
+  opacity: 0;
+
+  pointer-events: none;
 }
+
+.backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  background: rgba(32, 13, 29, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 2;
+  transition: opacity 250ms linear;
+}
+
 .modal__box {
   @media screen and (min-width: 320px) {
     width: 272px;
