Created stylef for Pagination

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,3 +13,4 @@
 @import './hero/hero';
 @import './modul-window-card/modul-window-card';
 @import './modul-window-our-team/modul-window-our-team';
+@import './pagination/pagination-styles';
