--- a/src/partials/events-section.html
+++ b/src/partials/events-section.html
@@ -284,5 +284,12 @@
       </li>
     </ul>
   </div>
+  <div class="pagenumbers" id="pagination">
+    <button class="active">1</button>
+    <button>2</button>
+    <button>3</button>
+    <button>4</button>
+    <button>5</button>
+  </div>
 </section>
 
