--- a/src/sass/header/_header.scss
+++ b/src/sass/header/_header.scss
@@ -1,13 +1,15 @@
 .logo {
+  max-width: 100%;
   position: absolute;
   top: 0;
   left: 0;
+  background-size: contain;
 }
 
 @media screen and (max-width: 767px) {
   .logo {
-    width: 106px;
-    height: 90px;
+    width: 108px;
+    height: 91px;
     background-image: url('../images/logo-mob.png');
   }
 
@@ -23,7 +25,7 @@
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .logo {
     width: 179px;
-    height: 150px;
+    height: 151px;
     background-image: url('../images/logo-tablet.png');
   }
 
