--- a/src/sass/events-section/_gallery-styles.scss
+++ b/src/sass/events-section/_gallery-styles.scss
@@ -1,2 +1,57 @@
 .events-list {
+  display: flex;
+  flex-wrap: wrap;
+
+  .events-list__item {
+    display: block;
+    text-align: center;
+    width: 138px;
+    height: 100%;
+
+    &:not(:last-child) {
+      @media screen and (max-width: $to-tablet) {
+        // width: calc((100% - 2 * 4px) / 2);
+        margin-right: 4px;
+        margin-bottom: 30px;
+
+        &:nth-child(2n) {
+          margin-right: 0;
+        }
+
+        &:nth-last-child(-n + 2) {
+          margin-bottom: 0;
+        }
+      }
+    }
+
+    @media screen and (min-width: $tablet) and (max-width: $to-desktop) {
+      width: calc((100% - 3 * 13px) / 3);
+      height: 312px;
+      margin-right: 13px;
+      margin-bottom: 45px;
+
+      &:nth-child(3n) {
+        margin-right: 0;
+      }
+
+      &:nth-last-child(-n + 3) {
+        margin-bottom: 0;
+      }
+    }
+
+    @media screen and (min-width: $desktop) {
+      width: calc((100% - 4 * 56px) / 4);
+      height: 312px;
+      margin-right: 56px;
+      margin-bottom: 50px;
+
+      &:nth-child(4n) {
+        margin-right: 0;
+      }
+
+      &:nth-last-child(-n + 4) {
+        margin-bottom: 0;
+      }
+    }
+  }
 }
