listener on form

--- a/src/partials/events-section.html
+++ b/src/partials/events-section.html
@@ -15,13 +15,13 @@
       <select name="" id="country-select" class="events__search-country events__input">
         <option value="">Choose country</option>
       </select>
-            <label class="events__select-label" for="country-select">
+      <label class="events__select-label" for="country-select">
         <svg width="15" height="10" class="events__arrow-icon">
           <use href="./../src/images/svg/gallery-sprite.svg#icon-arrow"></use>
         </svg>
       </label>
     </form>
-    <ul class="events-list">
+    <ul class="events-list js-list">
       <li class="events-list__item">
         <img
           class="event-image"
@@ -285,4 +285,3 @@
     </ul>
   </div>
 </section>
-
