adds  modal_close_btn

--- a/src/partials/modul-window-card.html
+++ b/src/partials/modul-window-card.html
@@ -1,9 +1,9 @@
 <div data-modal class="backdrop is--hidden">
   <div class="modal__box">
+    <button class="modal__btn">
+      <span class="modal__btn_close"></span>
+    </button>
     <form class="modal__form" action="">
-      <button class="modal__btn">
-        <span class="modal__superbtn"></span>
-      </button>
       <div class="modal__circle">
         <img src="#" alt="" />
       </div>
