change modal styles

--- a/src/sass/modul-window-card/_modul-window-card.scss
+++ b/src/sass/modul-window-card/_modul-window-card.scss
@@ -223,7 +223,7 @@
 
   margin-right: 13px;
 
-  background-color: black;
+  background-image: url('../images/barcode.png');
 }
 .modal_buy .btn {
   @media screen and (min-width: 320px) {
