--- a/src/partials/modul-window-card.html
+++ b/src/partials/modul-window-card.html
@@ -1,5 +1,5 @@
 <div data-modal class="backdrop is--hidden">
-  <div class="modal__box">
+  <div class="modal-box">
     <button class="modal__btn">
       <span class="modal__btn_close"></span>
     </button>
