--- a/src/sass/modul-window-card/_modul-window-card.scss
+++ b/src/sass/modul-window-card/_modul-window-card.scss
@@ -17,7 +17,7 @@
   transition: opacity 250ms linear;
 }
 
-.modal__box {
+.modal-box {
   @media screen and (min-width: 320px) {
     width: 272px;
     height: 915px;
