--- a/src/partials/events-section.html
+++ b/src/partials/events-section.html
@@ -23,7 +23,7 @@
       </label>
     </form>
     <ul class="events-list js-list">
-      <!-- <li class="events-list__item">
+      <li class="events-list__item">
         <img
           class="event-image"
           src="./images/Rectangle6.jpg"
@@ -282,8 +282,9 @@
         <h2 class="event-name">MONATIK</h2>
         <p class="event-date">2021-07-17</p>
         <p>Palace</p>
-      </li> -->
+      </li>
     </ul>
+
     <div class="pagenumbers" id="pagination">
       <button class="active">1</button>
       <button>2</button>
