--- a/src/partials/modul-window-card.html
+++ b/src/partials/modul-window-card.html
@@ -1,4 +1,4 @@
-<div data-modal class="backdrop is--hidden">
+<div id="modal-card" class="backdrop is--hidden">
   <div class="modal-box">
     <button class="modal__btn">
       <span class="modal__btn_close"></span>
