--- a/src/sass/modul-window-card/_modul-window-card.scss
+++ b/src/sass/modul-window-card/_modul-window-card.scss
@@ -3,13 +3,17 @@
 
   pointer-events: none;
 }
-
+.backdrop.is--hidden .modal-box {
+  transform: translate(-50%, -50%) scale(0.3);
+}
 .backdrop {
   position: fixed;
-  width: 100%;
-  height: 100%;
   top: 0;
   left: 0;
+
+  width: 100%;
+  height: 100%;
+
   opacity: 1;
   background: rgba(32, 13, 29, 0.6);
   backdrop-filter: blur(3px);
@@ -38,7 +42,8 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms linear;
 
   background-color: rgba(255, 242, 253, 1);
 }
