--- a/src/sass/events-section/_inputs-styles.scss
+++ b/src/sass/events-section/_inputs-styles.scss
@@ -1,5 +1,8 @@
 .events__search-form {
-  position: relative;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 147px;
 
   display: flex;
   flex-direction: column;
@@ -7,16 +10,15 @@
   width: 270px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 52px;
 
   @media screen and(min-width: $tablet) {
     flex-direction: row;
     width: 570px;
-    margin-bottom: 123px;
+    top: 141px;
   }
 
   @media screen and(min-width: $desktop) {
-    margin-bottom: 133px;
+    top: 214px;
   }
 }
 .events__search-label {
@@ -40,7 +42,6 @@
     right: 25px;
   }
   @media screen and(min-width: $desktop) {
-    // right: 555px;
   }
 }
 .events__input {
@@ -48,8 +49,6 @@
   font-size: 16px;
   line-height: 1.15;
   padding: 10px 30px;
-  //   padding-bottom: 10px;
-  //   padding-left: 30px;
 
   background-color: rgba(255, 255, 255, 0.2);
 
