--- a/src/sass/events-section/_one-card-styles.scss
+++ b/src/sass/events-section/_one-card-styles.scss
@@ -1,67 +1,73 @@
 .events-list__item {
-    text-align: center;
-    position: relative;
-    @media screen and (max-wigth: $to-tablet) {
-        width: 138px;
-        padding-top: 9px;
-        padding-right: 10px;
-    }
+  text-align: center;
+  position: relative;
+  @media screen and (max-wigth: $to-tablet) {
+    width: 138px;
+    padding-top: 9px;
+    padding-right: 10px;
+  }
+  @media screen and (min-wigth: $tablet) {
     width: 196px;
-    margin-right: 4px;
     padding-top: 13px;
     padding-right: 14px;
+  }
+  margin-right: 4px;
 }
 
 .event-image {
-    @media screen and (max-wigth: $to-tablet) {
-        width: 128px;
-        height: 161px;
-    }
+  @media screen and (max-wigth: $to-tablet) {
+    width: 128px;
+    height: 161px;
+  }
+
+  @media screen and (min-wigth: $tablet) {
     width: 180px;
     height: 277px;
-    border-radius: 50px 0px;
+  }
+
+  border-radius: 50px 0px;
 }
 
 .event-image-span {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 109px;
-    height: 101px;
-    border: 1px solid rgba(220, 86, 197, 0.3);
-    box-sizing: border-box;
-    border-radius: 50px 0px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 109px;
+  height: 101px;
+  border: 1px solid rgba(220, 86, 197, 0.3);
+  box-sizing: border-box;
+  border-radius: 50px 0px;
 }
 
 .event-name {
-    margin-top: 5px;
-    color: $accent-color;
-    font-size: 14px;
+  margin-top: 5px;
+  color: $accent-color;
+  font-size: 14px;
 }
 
 .event-date {
-    margin: 0;
-    margin-top: 5px;
-    color: $darc-theme-main-text-color;
-    font-size: 14px;
-    font-weight: 400;
+  margin: 0;
+  margin-top: 5px;
+  color: $darc-theme-main-text-color;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .event-location {
-    display: block;
-    margin: 0;
-    margin-top: 5px;
-    color: $darc-theme-main-text-color;
-    font-size: 12px;
-    font-weight: 600;
+  display: block;
+  margin: 0;
+  margin-top: 5px;
+  color: $darc-theme-main-text-color;
+  font-size: 12px;
+  font-weight: 600;
 }
 
 .event-location::before {
-    content: "";
-    display: inline-block;
-    width: 6px;
-    height: 9px;
-    margin-right: 3px;
-    background-image: url(/images/location-point.svg);
-    background-size: 6px 9px;
+  content: '';
+  display: inline-block;
+  width: 6px;
+  height: 9px;
+  margin-right: 3px;
+  background-image: url(/images/location-point.svg);
+  background-size: 6px 9px;
 }
