--- a/src/sass/modul-window-our-team/_modul-window-our-team.scss
+++ b/src/sass/modul-window-our-team/_modul-window-our-team.scss
@@ -7,6 +7,8 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
     opacity: 1;
+    backdrop-filter: blur(3px);
+    z-index: 2;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden {
@@ -16,14 +18,14 @@
 .backdrop.is-hidden .modal {
     transform: translate(-50%, -50%) scale(1.1);
 }
-.modal {
+.modal-team {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
     width: 1100px;
     height: 640px;
-    background: rgb(255, 202, 246);
+    background-color: red;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 120px 0;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
