--- a/src/partials/modul-window-our-team.html
+++ b/src/partials/modul-window-our-team.html
@@ -1,8 +1,8 @@
 <div class="backdrop is-hidden" data-modal>
     <div class="modal-team">
-        <button data-modal-close  class="close"><svg class="closeLogo" width="18" height="18">
-            <use href="./../src/images/svg/symbol.svg#close-button"></use>
-        </svg></button>
+        <button data-modal-close class="modal__btn">
+            <span class="modal__btn_close"></span>
+        </button>
         <h3 class="modalTitle">Our development team</h3>
         <ul class="headlines-list1 list">
             <li class="personal-item">
