Исправил стили карточек и контейнера галереи

--- a/src/sass/pagination/_pagination-styles.scss
+++ b/src/sass/pagination/_pagination-styles.scss
@@ -3,6 +3,12 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    @media screen and (max-width: $to-desktop) {
+        margin-top: 60px;
+    }
+    @media screen and (min-width: $desktop) {
+        margin-top: 80px;
+    }
 }
 
 .pagenumbers button {
