--- a/src/sass/modul-window-card/_modul-window-card.scss
+++ b/src/sass/modul-window-card/_modul-window-card.scss
@@ -1,11 +1,14 @@
-.backdrop.is--hidden {
+body.modal-open {
+  overflow: hidden;
+}
+.backdrop__modal.is--hidden {
   opacity: 0;
   pointer-events: none;
 }
-.backdrop.is--hidden .modal-box {
+.backdrop__modal.is--hidden .modal-box {
   transform: translate(-50%, -50%) scale(2);
 }
-.backdrop {
+.backdrop__modal {
   position: fixed;
   top: 0;
   left: 0;
@@ -30,6 +33,7 @@
   @media screen and (min-width: 595px) {
     width: 595px;
     height: 831px;
+
     border-radius: 300px 0 300px 0;
   }
   @media screen and (min-width: 1050px) {
@@ -37,6 +41,8 @@
     height: 1023px;
     border-radius: 300px 0 300px 0;
   }
+  overflow: auto;
+  max-height: 100%;
 
   position: absolute;
   top: 50%;
@@ -46,19 +52,19 @@
 
   background-color: rgba(255, 242, 253, 1);
 }
-.modal__form {
+.modal-box::-webkit-scrollbar {
+  width: 0;
+}
+.modal__window {
   @media screen and (min-width: 320px) {
     padding: 75px 12px 104px 12px;
   }
   @media screen and (min-width: 595px) {
-    padding: 28px 12px 56px 50px;
+    padding: 28px 17px 56px 50px;
   }
   @media screen and (min-width: 1050px) {
     padding: 62px 30px;
   }
-
-  width: 100%;
-  height: 100%;
 }
 .modal__circle {
   @media screen and (min-width: 320px) {
@@ -247,7 +253,7 @@
   color: #ffffff;
   border-radius: 5px;
 }
-.modal__btn_submit {
+.modal__btn__more {
   @media screen and (min-width: 320px) {
     width: 230px;
     height: 40px;
@@ -267,6 +273,7 @@
 
   display: block;
   margin: 0 auto;
+  padding: 0;
 
   font-weight: 500;
   font-size: 16px;
