--- a/src/partials/modul-window-card.html
+++ b/src/partials/modul-window-card.html
@@ -1,9 +1,9 @@
-<div id="modal-card" class="backdrop is--hidden">
+<div data-modal-backdrop="" id="modal-card" class="backdrop__modal is--hidden">
   <div class="modal-box">
-    <button class="modal__btn">
+    <button data-modal-window-close class="modal__btn">
       <span class="modal__btn_close"></span>
     </button>
-    <form class="modal__form" action="">
+    <div class="modal__window">
       <div class="modal__circle">
         <img src="#" alt="" />
       </div>
@@ -61,7 +61,7 @@
         </div>
       </div>
 
-      <button class="modal__btn_submit" type="submit">MORE FROM THIS AUTHOR</button>
-    </form>
+      <button class="modal__btn__more" type="submit">MORE FROM THIS AUTHOR</button>
+    </div>
   </div>
 </div>
