adds appearence animation

--- a/src/templates/event-card.hbs
+++ b/src/templates/event-card.hbs
@@ -1,5 +1,5 @@
 {{#each this}}
-<li class="events-list__item" id="{{id}}">
+<li class="events-list__item animate__animated animate__bounceInUp" id="{{id}}">
     <img class="event-image" 
         {{#each images}} 
             src="{{url}}" 
