--- a/src/partials/modul-window-our-team.html
+++ b/src/partials/modul-window-our-team.html
@@ -6,7 +6,7 @@
         <h3 class="modalTitle">Our development team</h3>
         <ul class="headlines-list1 list">
             <li class="personal-item">
-                <img class="personal-photo" src="./../src/images/developer-photo/Aleksandr-Pilganchuk-150х145.jpg" width="150" alt="фото фронтэнд разработчика">
+                <img class="personal-photo" src="./../src/images/developer-photo/Kate-Kraieva-150x145.jpg" width="150" alt="фото фронтэнд разработчика">
                 <h3 class="headlines-name">Aleksandr Pilganchuk</h3>
                 <p class="position">Team Lead</p>
                 <ul class="social">
