Changen ID in section

--- a/src/partials/events-section.html
+++ b/src/partials/events-section.html
@@ -17,7 +17,7 @@
             </label>
         </form>
 
-        <ul class="events-list js-list">
+        <ul class="events-list js-list" id="data-container">
             <li class="events-list__item">
                 <img class="event-image" src="./images/Rectangle6.jpg" alt="тест-картинка" width="180" height="227" />
                 <span class="event-image-span"></span>
@@ -162,7 +162,7 @@
 
         <div class="spinner opacity"></div>
 
-        <div class="pagenumbers" id="pagination">
+        <div class="pagenumbers">
             <button class="active">1</button>
             <button>2</button>
             <button>3</button>
