--- a/src/partials/events-section.html
+++ b/src/partials/events-section.html
@@ -162,12 +162,6 @@
 
         <div class="spinner opacity"></div>
 
-        <div class="pagenumbers">
-            <button class="active">1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>4</button>
-            <button>5</button>
-        </div>
+        <div class="pagenumbers"></div>
     </div>
 </section>
