--- a/src/partials/events-section.html
+++ b/src/partials/events-section.html
@@ -17,7 +17,7 @@
             </label>
         </form>
 
-        <ul class="events-list js-list" id="data-container">
+        <ul class="events-list js-list">
             <li class="events-list__item">
                 <img class="event-image" src="./images/Rectangle6.jpg" alt="тест-картинка" width="180" height="227" />
                 <span class="event-image-span"></span>
@@ -161,7 +161,7 @@
         </ul>
 
         <div class="spinner opacity"></div>
-
-        <div class="pagenumbers"></div>
+        <div id="data-container"></div>
+        <div class="pagenumbers" id="pagination"></div>
     </div>
 </section>
