--- a/src/partials/events-section.html
+++ b/src/partials/events-section.html
@@ -162,6 +162,6 @@
 
         <div class="spinner opacity"></div>
         <div id="data-container"></div>
-        <div class="pagenumbers" id="pagination"></div>
+        <div class="pagenumbers"></div>
     </div>
 </section>
