--- a/src/sass/modul-window-card/_modul-window-card.scss
+++ b/src/sass/modul-window-card/_modul-window-card.scss
@@ -9,6 +9,8 @@ body.modal-open {
   transform: translate(-50%, -50%) scale(2);
 }
 .backdrop__modal {
+  overflow: auto;
+
   position: fixed;
   top: 0;
   left: 0;
@@ -31,29 +33,28 @@ body.modal-open {
     border-radius: 150px 0 150px 0;
   }
   @media screen and (min-width: 595px) {
+    top: 55%;
     width: 595px;
     height: 831px;
 
     border-radius: 300px 0 300px 0;
   }
   @media screen and (min-width: 1050px) {
+    top: 65%;
     width: 942px;
     height: 1023px;
     border-radius: 300px 0 300px 0;
   }
-  overflow: auto;
-  max-height: 100%;
-  max-width: 100%;
 
   position: absolute;
-  top: 50%;
+
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms linear;
 
   background-color: rgba(255, 242, 253, 1);
 }
-.modal-box::-webkit-scrollbar {
+.backdrop__modal::-webkit-scrollbar {
   width: 0;
 }
 .modal__window {
