--- a/src/sass/modul-window-card/_modul-window-card.scss
+++ b/src/sass/modul-window-card/_modul-window-card.scss
@@ -137,6 +137,7 @@
   justify-content: space-between;
 }
 .modal__img {
+  object-fit: cover;
   @media screen and (min-width: 320px) {
     display: none;
   }
