--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header>
   <div class="container">
-    <a href="">
+    <a class="logo-position" href="">
       <div class="logo"></div>
     </a>
   </div>
