--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,8 @@
 <section class="hero">
-    <div class="container hero-container">
-        <h1 class="hero-title">FIND BEST EVENTS <br> AROUND THE WORLD</h1>
-    </div>
+  <div class="container hero-container">
+    <h1 class="hero-title">
+      FIND BEST EVENTS <br />
+      AROUND THE WORLD
+    </h1>
+  </div>
 </section>
