--- a/src/sass/header/_header.scss
+++ b/src/sass/header/_header.scss
@@ -1,9 +1,9 @@
 .logo {
-  max-width: 100%;
-  position: absolute;
   top: 0;
   left: 0;
+  position: absolute;
   background-size: contain;
+  background-repeat: no-repeat;
 }
 
 @media screen and (max-width: 767px) {
@@ -40,6 +40,7 @@
 
 @media screen and (min-width: 1200px) {
   .logo {
+    max-width: 1700px;
     width: 239px;
     height: 200px;
     background-image: url('../images/logo-laptop.png');
